docker-registry/registry/arm/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: registry
  name: registry-front
  #annotations:
  #    metallb.universe.tf/loadBalancerIPs: 192.168.0.85
spec:
  selector:
    matchLabels:
      name: registry-front
  template:
    metadata:
      labels:
        name: registry-front
        app: registry-front
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - arm
                    - arm64
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      - key: node-role.kubernetes.io/control-plane
        effect: NoSchedule
      containers:
      - name: registry-front
        image: klausmeyer/docker-registry-browser:1.6.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 0.4
            memory: 500Mi
          requests:
            cpu: 0.2
            memory: 200Mi
      terminationGracePeriodSeconds: 30
    #   hostNetwork: true
    #   hostPID: true
---
apiVersion: v1
kind: Service
metadata:
  name: registry-front
  namespace: registry
spec:
  selector:
    app: registry-front
  ports:
    - port: 8080
      targetPort: 8080
  # type: LoadBalancer
  type: ClusterIP
  # clusterIP: None
---
