docker-registry/registry/arm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-front
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: registry.kube.home
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: registry-front
            port:
              number: 8080
